fixed UI on small devices

--- a/src/components/ProductBlock/ProductDesc/ProductTabs/ProductTabs.scss
+++ b/src/components/ProductBlock/ProductDesc/ProductTabs/ProductTabs.scss
@@ -40,6 +40,11 @@
   &__desc {
     line-height: 19px;
     margin-bottom: 32px;
+    font-size: 12px;
+
+    @include onTablet {
+      font-size: 14px;
+    }
   }
 
   &__rewiew-list {
@@ -52,6 +57,11 @@
     padding: 8px 4px 8px 12px;
     background-color: $color-pale-green;
     border-radius: 10px;
+    font-size: 12px;
+
+    @include onTablet {
+      font-size: 14px;
+    }
   }
 
   &__questions-list {
@@ -72,13 +82,27 @@
     background-color: $color-pale-green;
     border-radius: 10px;
     width: 80%;
+    font-size: 12px;
+
+    @include onTablet {
+      font-size: 14px;
+    }
   }
 
   &__answer {
-    margin-left: 32px;
     padding: 8px 4px 8px 12px;
     border-radius: 10px;
     background-color: $color-gray-main;
     width: 100%;
+    font-size: 12px;
+
+    @include onMobile {
+      margin-left: 22px;
+    }
+
+    @include onTablet {
+      margin-left: 30px;
+      font-size: 14px;
+    }
   }
 }
