--- a/src/components/ProductBlock/ProductDesc/ProductTabs/Tabs/Tabs.scss
+++ b/src/components/ProductBlock/ProductDesc/ProductTabs/Tabs/Tabs.scss
@@ -6,14 +6,24 @@
   position: relative;
   display: flex;
   margin-bottom: 48px;
+  flex-direction: column;
+  align-items: center;
+
+  @include onMobile {
+    flex-direction: row;
+  }
 
   &__tab {
-    width: 33%;
+    width: 90%;
     cursor: pointer;
     padding: 16px 0px;
     display: flex;
     gap: 8px;
     border-bottom: 2px solid $color-tags;
+
+    @include onMobile {
+      width: 33%;
+    }
   }
   
   &__tab--selected {
@@ -22,6 +32,11 @@
 
   &__label {
     color: $color-black;
+    font-size: 12px;
+
+    @include onTablet {
+      font-size: 14px;
+    }
   }
 
   &__tab-animated {
@@ -31,6 +46,11 @@
     background-color: $color-main-text;
     transition: transform 0.3s, width 0.3s;
     transform-origin: left;
+    display: none;
+
+    @include onMobile {
+      display: inherit;
+    }
   }
 
   &__qnty {
